@@ -237,7 +237,7 @@ class Greeter:
 
     def password_activate_cb(self, widget):
         self.password_entry.set_sensitive(False)
-        self.greeter.provide_secret(self.password_entry.get_text())
+        self.greeter.respond(self.password_entry.get_text())
 
     def show_prompt_cb(self, greeter, text):
         self.password_entry.show()
