@@ -9,7 +9,7 @@ GREETER CONNECT-TO-DAEMON
 GREETER CONNECTED-TO-DAEMON
 GREETER LOGIN USERNAME=alice
 GREETER SHOW-PROMPT TEXT="Password:"
-GREETER PROVIDE-SECRET TEXT="password"
+GREETER RESPOND TEXT="password"
 GREETER AUTHENTICATION-COMPLETE AUTHENTICATED=TRUE
 GREETER QUIT
 SESSION START USER=alice
