@@ -15,9 +15,9 @@ GREETER CONNECTED-TO-DAEMON
 # Login as alice, but let lightdm prompt for a username
 GREETER LOGIN
 GREETER SHOW-PROMPT TEXT="login:"
-GREETER PROVIDE-SECRET TEXT="alice"
+GREETER RESPOND TEXT="alice"
 GREETER SHOW-PROMPT TEXT="Password:"
-GREETER PROVIDE-SECRET TEXT="password"
+GREETER RESPOND TEXT="password"
 GREETER AUTHENTICATION-COMPLETE AUTHENTICATED=TRUE
 
 # Greeter quits and session starts
