@@ -9,7 +9,7 @@ GREETER CONNECT-TO-DAEMON
 GREETER CONNECTED-TO-DAEMON
 GREETER LOGIN USERNAME=alice
 GREETER SHOW-PROMPT TEXT="Password:"
-GREETER PROVIDE-SECRET TEXT="rubbish"
+GREETER RESPOND TEXT="rubbish"
 GREETER AUTHENTICATION-COMPLETE AUTHENTICATED=FALSE
 *STOP-DAEMON
 # Don't know what order they will terminate
