@@ -15,7 +15,7 @@ GREETER CONNECTED-TO-DAEMON
 # Log in as alice
 GREETER LOGIN USERNAME=alice
 GREETER SHOW-PROMPT TEXT="Password:"
-GREETER PROVIDE-SECRET TEXT="password"
+GREETER RESPOND TEXT="password"
 GREETER AUTHENTICATION-COMPLETE AUTHENTICATED=TRUE
 
 # Greeter quits, and session starts
