@@ -16,7 +16,7 @@ GREETER CONNECTED-TO-DAEMON
 # Alice is logged in
 GREETER LOGIN USERNAME=alice
 GREETER SHOW-PROMPT TEXT="Password:"
-GREETER PROVIDE-SECRET TEXT="password"
+GREETER RESPOND TEXT="password"
 GREETER AUTHENTICATION-COMPLETE AUTHENTICATED=TRUE
 GREETER QUIT
 SESSION START USER=alice
@@ -43,7 +43,7 @@ GREETER CONNECTED-TO-DAEMON
 # Log in as alice
 GREETER LOGIN USERNAME=alice
 GREETER SHOW-PROMPT TEXT="Password:"
-GREETER PROVIDE-SECRET TEXT="password"
+GREETER RESPOND TEXT="password"
 GREETER AUTHENTICATION-COMPLETE AUTHENTICATED=TRUE
 
 # New display should quit, and first login should be actived
